# shell-plus-plus

./: .gitmodules  .travis.yml  404.html  CMakeLists.txt  CNAME  Dockerfile  LICENSE  README.md  index.html  sitemap.xml
cmake/: CodeCoverage.cmake  CompilerWarnings.cmake  FindReadline.cmake  FindReadlinepp.cmake  GTest.cmake  SettiUtils.cmake  googletest.cmake  sanitize-helpers.cmake
doc/: setti.ebnf
docker/: Dockerfile.ubuntu
docs/: mkdocs.yml
docs/docs/: index.md  lang-basics.md
docs/site/: 404.html  sitemap.xml
docs/site/mkdocs/: search_index.json
examples/: CMakeLists.txt
examples/interpreter/: CMakeLists.txt  interpreter.cc
examples/language/: 1-hello-world.sh  10-type.sh  11-shell.sh  14-io.sh  15-functions.sh  2-variables.sh  5-array.sh  7-if-else.sh  8-switch.sh  9-loop.sh
examples/print_ast/: CMakeLists.txt  print_ast.cc
examples/print_tokens/: CMakeLists.txt  print_tokens.cc
examples/readline/: CMakeLists.txt  readline.cc
lang-basics/: index.html
lib/: argparse.sh  textcolor.sh
mkdocs/: search_index.json
samples/: .shpprc
samples/language/: 12-cmd.sh  13-sub-shell.sh  14-io.sh  2-variables.sh  3-arithmetic.sh  4-string.sh  6-map.sh
scripts/: lint.seti  lint.sh
shell/: CMakeLists.txt  main.cc  runner.cc  runner.h
src/: CMakeLists.txt  cmd-entry.cc  cmd-entry.h  cmd-exec.cc  cmd-exec.h  env-shell.cc  env-shell.h  msg.h  run_time_error.h
src/ast/: ast-class-inl.h  ast-factory-inl.h  ast-printer.h  ast-traversal-visitor.h  ast.cc  ast.h  obj_type.h  symbol_table.h
src/interpreter/: abstract-obj.h  array-object.cc  array-object.h  assign-executor.cc  assign-executor.h  assign_executor.cc  assign_executor.h  cmd-executor.cc  cmd-executor.h  cmd-object.cc  cmd-object.h  executor.h  expr-executor.cc  expr-executor.h  expr_executor.cc  expr_executor.h  func_object.cc  func_object.h  int-object.cc  int-object.h  intepreter.cc  intepreter.h  interpreter.cc  interpreter.h  obj_type.cc  obj_type.h  object-factory.cc  object-factory.h  scope-executor.cc  scope-executor.h  simple-object.cc  simple-object.h  stmt-executor.cc  stmt-executor.h  stmt_executor.cc  stmt_executor.h  str-object.cc  str-object.h  symbol-table.cc  symbol-table.h  (+1 more)
src/modules/: env.cc  env.h  path.cc  path.h  std-cmds.cc  std-cmds.h  std-funcs.cc  std-funcs.h  sys.cc  sys.h
src/objects/: abstract-obj.h  array-object.cc  array-object.h  cmd-object.cc  cmd-object.h  decl-class-object.cc  decl-class-object.h  exceptions-object.cc  exceptions-object.h  file-object.cc  file-object.h  func-object.cc  func-object.h  glob-object.cc  glob-object.h  map-object.cc  map-object.h  obj-type.cc  obj-type.h  object-factory.cc  object-factory.h  path.cc  path.h  regex.cc  regex.h  simple-object.cc  simple-object.h  slice-object.cc  slice-object.h  str-object.cc  str-object.h  tuple-object.cc  tuple-object.h
src/parser/: extract_expr.cc  extract_expr.h  lexer.cc  lexer.h  parser-oop.cc  parser.cc  parser.h  parser_literal_string.cc  parser_literal_string.h  parser_result.h  token.def  token.h
src/utils/: check.h  dir.h  glob.cc  glob.h  scope-exit.h
test/: CMakeLists.txt
test/interpreter/: run.seti  run.sh
test/interpreter/cmds/: binop_cmd.seti  cmd_decl.sh  cmd_decl_args.seti  io_cmd.shpp  redirect.sh  simple_cmd.sh  simple_cmd.shpp  status.sh  string.shpp  subshell.shpp
test/interpreter/func/: ellipsis.sh  err_func_num_param.seti  err_func_num_param2.sh  err_func_num_param3.shpp  err_func_num_param4.seti  err_func_param.seti  err_func_variadic.seti  fib.sh  func_args.sh  func_default.seti  func_default.shpp  func_empty.seti  func_lambda.shpp  func_lambda2.seti  func_params.sh  func_scope.shpp  func_variadic.seti  lambda_inside_class.sh
test/interpreter/import/: import1.sh  import12.sh  import_module1.sh  import_module2.sh  import_module3.sh  main1.sh  module.sh
test/interpreter/lang_basic/: argv.sh  array.seti  array.shpp  assign.sh  file.sh  filter.sh  glob.sh  global.sh  if_else.shpp  if_else2.sh  if_else_empty.seti  if_else_expr.sh  import-test.sh  import.sh  import_test.sh  lambda.sh  let.shpp  let2.sh  list_comp.sh  quicksort.sh  range_it.shpp  string.shpp  tuple.shpp  tuple2.sh  varenv.sh  while.shpp  while_break.seti  while_break2.sh  while_continue.seti
test/interpreter/objects/: path.sh
test/interpreter/oop/: abastract-method.sh  attr.sh  class.seti  decorator.sh  err_try_catch5.sh  exceptions.sh  facade.sh  final.sh  ifaces.sh  inheritance.sh  inner_class.shpp  instanceof.sh  is.sh  methods.sh  op_overload.shpp  singleton.sh  static-method.sh  try_catch.sh  try_catch2.sh  try_catch3.sh  try_catch4.sh  var_decl.sh
test/lib/: argparse_test.sh  textcolor_test.sh
test/unit/: CMakeLists.txt  cmd.cc  extract_expr.cc  lexer_test.cc  parser_test.cc  token_test.cc
tools/: CMakeLists.txt
tools/interpreter/: CMakeLists.txt  interpreter.cc
tools/print_ast/: CMakeLists.txt  print_ast.cc
tools/print_parser_string/: CMakeLists.txt  print_parser_string.cc
tools/print_tokens/: CMakeLists.txt  print_tokens.cc
