file(GLOB SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.cc)
file(GLOB SOURCES_PARSER ${CMAKE_CURRENT_SOURCE_DIR}/parser/*.cc)
file(GLOB SOURCES_INTER ${CMAKE_CURRENT_SOURCE_DIR}/interpreter/*.cc)
file(GLOB SOURCES_OBJECTS ${CMAKE_CURRENT_SOURCE_DIR}/objects/*.cc)
file(GLOB SOURCES_MODULES ${CMAKE_CURRENT_SOURCE_DIR}/modules/*.cc)

include_directories(${CMAKE_CURRENT_SOURCE_DIR})

add_library(setti ${SOURCES} ${SOURCES_PARSER} ${SOURCES_INTER}
            ${SOURCES_OBJECTS} ${SOURCES_MODULES})
